box shadow in sidebar

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -28,8 +28,9 @@
 
 .sidebar .sidebar__nav .sidebar__nav__link:hover {
 	/*background-color: rgba(0, 0, 0, 0.15);*/
-	background-color: #E8E8E8;
+	background-color: #ffffff;
 	color: #3e64ff;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .sidebar .sidebar__nav .sidebar__nav__text {
