--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -31,6 +31,7 @@
 	background-color: #ffffff;
 	color: #3e64ff;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	background-image: linear-gradient(to right,#D8D8D8,#ffffff);
 }
 
 .sidebar .sidebar__nav .sidebar__nav__text {
