--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -56,9 +56,7 @@
 		bottom: 0;
 		width: 100%;
 	}
-
 	
-
 	.sidebar img{
 		width: 70%;
 	}
@@ -70,7 +68,6 @@
 	.sidebar .sidebar__nav .sidebar__nav__link {
 		height: 100%;
 		padding: 0.75em;
-		box-shadow: -20px 29px 0px 0px rgba(0,0,0,0.73);
 	}
 
 	.sidebar .sidebar__nav i {
@@ -93,9 +90,9 @@
 		flex-direction: column;
 	}
 
-	/*.sidebar .sidebar__nav li:last-child {
+	.sidebar .sidebar__nav li:last-child {
 		margin-top: auto;
-	}*/
+	} 
 
 	.sidebar .sidebar__nav .sidebar__nav__link {
 		padding: 1em;
